# modplus

./: CMakeLists.txt  IMBMasterProcV2.h  MBMasterProcV2.h  MBNodeProcV2.h  MBReg.h  MBRegContainerV2.h  README  README.md
googletest/googletest/: CMakeCache.txt
include/: AnalogRWGroup.h  AnalogReadGroup.h  DigitalRWGroup.h  DigitalReadGroup.h  IMBControllerProc.h  IRegGroup.h  MBControllerProc.h  MBNodeProc.h  MBReg.h  MBRegContainer.h
src/: AnalogRWGroup.cpp  AnalogReadGroup.cpp  DigitalRWGroup.cpp  DigitalReadGroup.cpp
testsuite/: CMakeLists.txt  Test_main.cpp
testsuite/src/: MBNodeProc_test.cpp  MBRegContainer_test.cpp  MBReg_test.cpp  MBTestReg.h
util/: IEnumPrinter.h  Util.cpp  Util.h
